--- a/.gitignore
+++ b/.gitignore
@@ -8,8 +8,7 @@ yarn-error.log*
 # Coverage directory used by tools like istanbul
 coverage
 
-# Compiled binary addons (https://nodejs.org/api/addons.html)
-build/Release
+build/
 
 # Dependency directories
 node_modules/
@@ -28,3 +27,5 @@ node_modules/
 
 # dotenv environment variables file
 .env
+
+.idea
