--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
 	"repositories": [
 		{
 			"type": "git",
-			"url": "https://github.com/WordPress/WordPress-Coding-Standards"
+			"url": "https://github.com/WordPress/WordPress-Coding-Standards.git"
 		}
 	],
 	"require-dev": {
