Add the .cache folder for PHPCS

--- a/.github/workflows/coding-standards.yml
+++ b/.github/workflows/coding-standards.yml
@@ -83,6 +83,9 @@ jobs:
             printf ${changed_file}"\n" >> $GITHUB_WORKSPACE/file-list
           done
 
+      - name: Create the PHPCS cache folder
+        run: mkdir -p $GITHUB_WORKSPACE/.cache
+
       - name: Run PHPCS on all changed files
         continue-on-error: true
         run: |
