--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
 	},
 	"repositories": [
 		{
-			"type": "git",
+			"type": "vcs",
 			"url": "https://github.com/WordPress/WordPress-Coding-Standards.git"
 		}
 	],
