--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,10 @@
 	"description": "A simple plugin to greet users when they log in.",
 	"homepage": "https://wordpress.org",
 	"keywords": [
-		"hello", "Gutenberg", "wordpress", "wp"
+		"hello",
+		"Gutenberg",
+		"wordpress",
+		"wp"
 	],
 	"support": {
 		"issues": "https://github.com/yoren/hello-user/issues"
@@ -23,7 +26,8 @@
 		"squizlabs/php_codesniffer": "^3.7.2",
 		"wp-coding-standards/wpcs": "dev-develop",
 		"phpcompatibility/phpcompatibility-wp": "~2.1.3",
-		"yoast/phpunit-polyfills": "^1.0.1"
+		"yoast/phpunit-polyfills": "^1.0.1",
+		"brainmaestro/composer-git-hooks": "^2.8"
 	},
 	"config": {
 		"allow-plugins": {
@@ -33,6 +37,25 @@
 	"scripts": {
 		"format": "@php ./vendor/squizlabs/php_codesniffer/bin/phpcbf --report=summary,source",
 		"lint": "@php ./vendor/squizlabs/php_codesniffer/bin/phpcs --report=summary,source",
-		"lint:errors": "@lint -n"
+		"lint:errors": "@lint -n",
+		"post-install-cmd": "cghooks add --ignore-lock",
+		"post-update-cmd": "cghooks update"
+	},
+	"extra": {
+		"hooks": {
+			"config": {
+				"stop-on-failure": [
+					"pre-push"
+				]
+			},
+			"pre-commit": [
+				"echo committing as $(git config user.name)",
+				"composer format $(git diff --name-only --staged)"
+			],
+			"pre-push": [
+				"composer lint:errors $(git diff --name-only --staged)"
+			],
+			"post-merge": "composer update"
+		}
 	}
 }
