--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -34,7 +34,7 @@ jobs:
       - name: Install Composer dependencies
         uses: ramsey/composer-install@v2
         with:
-          composer-options: "--no-progress --no-ansi --no-interaction --no-dev"
+          composer-options: "--no-progress --no-ansi --no-interaction --no-dev --no-scripts"
           ignore-cache: "yes"
 
       - name: Build project
